# Gawake

./: README.md  io.github.kelvinnovais.Gawake.json  io.github.kelvinnovais.Gawake.json~  meson.build
data/: io.github.kelvinnovais.Gawake.desktop.in  io.github.kelvinnovais.Gawake.gschema.xml  io.github.kelvinnovais.Gawake.metainfo.xml.in  io.github.kelvinnovais.Gawake.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: gawake-application.c  gawake-application.h  gawake-window.c  gawake-window.h  gawake-window.ui  gawake.gresource.xml  main.c  meson.build
